Add lecture 9 to the course webpage

--- a/index.qmd
+++ b/index.qmd
@@ -133,17 +133,17 @@ will work on debugging a piece of code together. You can find the code here:
 - **Reading:**
   [Chapter 22 (AdvR)](https://adv-r.hadley.nz/debugging.html#debugging)
 
-<!-- #### Lecture 9: Likelihood Optimization -->
-<!---->
-<!-- - **Slides:** [Likelihood Optimization](slides/lecture9.pdf) -->
-<!-- - **Reading:** -->
+#### Lecture 9: Likelihood Optimization
+
+- **Slides:** [Likelihood Optimization](slides/lecture9.pdf)
+- **Reading:**
+
+<!-- ### Week 6 -->
 <!---->
 <!-- #### Lecture 10: The EM Algorithm -->
 <!---->
 <!-- - **Slides:** [The EM Algorithm](slides/lecture10.pdf) -->
 <!-- - **Reading:** [Chapter 10 (CSwR)](https://cswr.nrhstat.org/em) -->
-<!---->
-<!-- ### Week 6 -->
 <!---->
 <!-- #### Lecture 11: Rcpp -->
 <!---->
@@ -160,24 +160,24 @@ will work on debugging a piece of code together. You can find the code here:
 <!--   - If you have time over, try the -->
 <!--     [exercises in 25.5.7 (AdvR)](https://adv-r.hadley.nz/rcpp.html#exercises-74) -->
 <!--     too -->
+<!-- #### Presentation of Assignment 3 -->
+<!---->
+<!-- - **Instructions:** [Assignment 3](assignments/assignment3.html) -->
+<!---->
 
-<!-- #### Lecture 11: Gaussian Mixtures and Mixed Models -->
+<!-- #### OLD: Lecture 11: Gaussian Mixtures and Mixed Models -->
 <!---->
 <!-- - **Slides:** [Gaussian Mixtures and Mixed Models](slides/lecture11.pdf) -->
 <!-- - **Reading:** -->
 <!--   - [Section 10.4](https://cswr.nrhstat.org/em#revisiting-gaussian-mixtures) -->
 <!--   - [Section 8.5](https://cswr.nrhstat.org/likelihood-and-optimization#mixed-models) -->
 
+<!-- ### Week 7 -->
+<!---->
 <!-- #### Lecture 12: Stochastic Gradient Descent -->
 <!---->
 <!-- - **Slides:** [Stochastic Gradient Descent](slides/lecture12.pdf) -->
 <!-- - **Reading:** [Sections 11-11.1 (CSwR)](https://cswr.nrhstat.org/stochopt) -->
-<!---->
-<!-- #### Presentation of Assignment 3 -->
-<!---->
-<!-- - **Instructions:** [Assignment 3](assignments/assignment3.html) -->
-<!---->
-<!-- ### Week 7 -->
 <!---->
 <!-- #### Lecture 13: Variations on Stochastic Gradient Descent -->
 <!---->
@@ -185,10 +185,13 @@ will work on debugging a piece of code together. You can find the code here:
 <!-- - **Reading:** -->
 <!--   [Sections 11.2-11.3 (CSwR)](https://cswr.nrhstat.org/stochopt#beyond-basic-stochastic-gradient-algorithms) -->
 <!---->
+<!-- #### Presentation of Assignment 4 -->
+<!---->
+<!-- - **Instructions:** [Assignment 4](assignments/assignment4.html) -->
+<!---->
+<!-- ### Week 8 -->
+<!---->
 <!-- #### Lecture 14: R Packages and Wrap-Up -->
 <!---->
 <!-- - **Slides:** [R Packages and Wrap-Up](slides/lecture14.pdf) -->
 <!---->
-<!-- #### Presentation of Assignment 4 -->
-<!---->
-<!-- - **Instructions:** [Assignment 4](assignments/assignment4.html) -->
