--- a/slides/lecture10.qmd
+++ b/slides/lecture10.qmd
@@ -81,20 +81,24 @@ moth_optim <- optim(c(0.3, 0.3), loglik)
 
 ## Incomplete Data Likelihood
 
-Suppose that $Y$ is a random variable and $X = M(Y)$. Suppose that $Y$ has
-density $f(\cdot \mid \theta)$ and that $X$ has marginal density
+Suppose that $Y$ is a random variable and $X = M(Y)$. Suppose that $Y$
+has density $f(\cdot \mid \theta)$ and that $X$ has marginal density
 $g(x \mid \theta)$.
 
-. . .
+\medskip\pause
 
 The marginal density is typically of the form
-$$g(x \mid \theta) = \int_{\{y: M(y) = x\}} f(y \mid \theta) \ \mu_x(\mathrm{d} y)$$
+$$
+g(x \mid \theta) = \int_{\{y: M(y) = x\}} f(y \mid \theta) \ \mu_x(\mathrm{d} y)
+$$
 for a suitable measure $\mu_x$ depending on $M$ and $x$ but not $\theta$.
 
-. . .
+\medskip\pause
 
 If $Y = (X, Z)$, then
-$$g(x \mid \theta) = \int f(x, z \mid \theta) \, \mathrm{d} z = \int f(x \mid z, \theta) h(z \mid \theta) \, \mathrm{d}z.$$
+$$
+g(x \mid \theta) = \int f(x, z \mid \theta) \, \mathrm{d} z = \int f(x \mid z, \theta) h(z \mid \theta) \, \mathrm{d}z.
+$$
 
 . . .
 
@@ -113,12 +117,12 @@ The general argument for the marginal density relies on the coarea formula.
 The complete log-likelihood, $\log f(y \mid \theta)$, **is** often easy to
 compute, but we don't know $Y$, only that $M(Y) = x$.
 
-. . .
+\medskip\pause
 
 In some cases it is possible to compute
-
-$$Q(\theta \mid \theta') := \operatorname{E}_{\theta'}(\log f(Y \mid \theta) \mid X = x),$$
-
+$$
+Q(\theta \mid \theta') := \operatorname{E}_{\theta'}(\log f(Y \mid \theta) \mid X = x),
+$$
 which is the _conditional expectation of the complete log-likelihood given the
 observed data and under the probability measure given by $\theta'$._
 
@@ -127,8 +131,10 @@ observed data and under the probability measure given by $\theta'$._
 ### Idea
 
 With an initial guess of $\theta' = \theta^{(n)}$, iteratively compute
-$$\theta^{(n + 1)} = \textrm{arg max} \ Q(\theta \mid \theta^{(n)})$$ for
-$n = 0, 1, 2, \ldots$.
+$$
+\theta^{(n + 1)} = \textrm{arg max} \ Q(\theta \mid \theta^{(n)})
+$$
+for $n = 0, 1, 2, \ldots$.
 
 . . .
 
@@ -140,61 +146,77 @@ $n = 0, 1, 2, \ldots$.
 ## Conditional Distributions
 
 Generally, conditional distribution of $Y$ given $X = x$ has density
-$$h(y \mid x, \theta) = \frac{f(y \mid \theta)}{g(x \mid \theta)}$$ w.r.t. a
-suitable measure $\mu_x$ that does not depend upon $\theta$.
+$$
+h(y \mid x, \theta) = \frac{f(y \mid \theta)}{g(x \mid \theta)}
+$$
+w.r.t. a suitable measure $\mu_x$ that does not depend upon $\theta$.
 
-. . .
+\medskip\pause
 
 $Y = (Z, X)$ with joint density w.r.t. a product measure $\mu \otimes \nu$ that
 does not depend upon $\theta$.
 
-. . .
+\medskip\pause
 
 In the latter case, $f(y \mid \theta) = f(z, x \mid \theta)$ and
-$$g(x \mid \theta) = \int f(z, x \mid \theta) \ \mathrm{d} z.$$
+$$
+g(x \mid \theta) = \int f(z, x \mid \theta) \ \mathrm{d} z.
+$$
 
 ## The Central Identity
 
 In general
-$$\ell(\theta) = \log g(x \mid \theta) = \log f(y \mid \theta) - \log h(y \mid x, \theta),$$
-and under some integrability conditions, this decomposition is used to show that
-the EM-algorithm increases the log-likelihood, $\ell(\theta)$, in each
+$$
+\ell(\theta) = \log g(x \mid \theta) = \log f(y \mid \theta) - \log h(y \mid x, \theta),
+$$
+and under some integrability conditions, this decomposition is used to show
+that the EM-algorithm increases the log-likelihood, $\ell(\theta)$, in each
 iteration.
 
 ## An Ascent Method
 
 It can be shown that
-$$\log g(x \mid \theta) - \log g(x \mid \theta') \geq Q(\theta | \theta') - Q(\theta' \mid \theta)$$
+$$
+\log g(x \mid \theta) - \log g(x \mid \theta') \geq Q(\theta \mid \theta') - Q(\theta' \mid \theta)
+$$
 
-. . .
+\medskip\pause
 
-In other words, marginal likelihood **weakly** increases in each iteration.
+In other words, the marginal likelihood **weakly** increases in each iteration.
 
-. . .
+\medskip\pause
 
 If $Q(\theta^{(n+1)} \mid \theta) > Q(\theta^{(n)} \mid \theta)$ then the
 algorithm **strictly** increases the likelihood.
 
-![](../images/em-iterations.png){width=87%}
+##
+
+![Four iterations of the EM algorithm.](../images/em-iterations.png){width=87%}
 
 ## Multinomial Complete Data Likelihood
 
 If $Y \sim \textrm{Mult}(p, n)$ the complete data log-likelihood is
-$$\ell_{\textrm{complete}}(p) = \sum_{i=1}^K Y_i \log(p_i).$$
+$$
+\ell_{\textrm{complete}}(p) = \sum_{i=1}^K Y_i \log(p_i).
+$$
 
 . . .
 
 Thus
-$$Q(p \mid p') = \operatorname{E}_{p'}( \ell_{\textrm{complete}}(p) \mid X = x) = \sum_{i=1}^K \operatorname{E}_{p'}( Y_i \mid X = x) \log(p_i)$$
+$$
+Q(p \mid p') = \operatorname{E}_{p'}( \ell_{\textrm{complete}}(p) \mid X = x) = \sum_{i=1}^K \operatorname{E}_{p'}( Y_i \mid X = x) \log(p_i)
+$$
 for any $X = M(Y)$.
 
 ## E-step for Multinomial Model
 
-For the multinomial model with $M : \mathbb{N}_0^K \to \mathbb{N}_0^{K_0}$ the
-cell collapsing map corresponding to the partition
+For the multinomial model with $M : \mathbb{N}_0^K \to \mathbb{N}_0^{K_0}$
+the cell collapsing map corresponding to the partition
 $A_1 \cup \ldots \cup A_{K_0} = \{1, \ldots, K \}$,
-$$\operatorname{E}_p (Y_k \mid X = x) = \frac{x_j p_k}{M(p)_j}.$$ for
-$k \in A_j$.
+$$
+\operatorname{E}_p (Y_k \mid X = x) = \frac{x_j p_k}{M(p)_j}.
+$$
+for $k \in A_j$.
 
 . . .
 
@@ -209,12 +231,16 @@ EStep_mult <- function(p, x, group) {
 ## Multinomial MLE for Moths
 
 With $y = (n_{CC}, n_{CI}, n_{CT}, n_{II}, n_{IT}, n_{TT})^T$ a complete
-observation, it can be shown that the MLE is \begin{align} \hat{p}_C & =
-(n_{CC} + (n*{CI} + n*{CT}) / 2) / n \\ \hat{p}_I & = ((n_{CI} + n*{IT}) / 2 +
-n*{II}) / n \end{align} where
-$n = n_{CC} + n_{CI} + n_{CT} + n_{II} + n_{IT} + n_{TT}$.
+observation, it can be shown that the MLE is
+$$
+\begin{aligned}
+  \hat{p}_C & = (n_{CC} + (n_{CI} + n_{CT}) / 2) / n \\
+  \hat{p}_I & = ((n_{CI} + n_{IT}) / 2 + n_{II}) / n
+\end{aligned}
+$$
+where $n = n_{CC} + n_{CI} + n_{CT} + n_{II} + n_{IT} + n_{TT}$.
 
-. . .
+\medskip\pause
 
 For us $\hat{p} = \frac{1}{n} \symbf{X} y$.
 
@@ -224,21 +250,7 @@ For us $\hat{p} = \frac{1}{n} \symbf{X} y$.
 
 ```{r x-matrix}
 X <- matrix(
-  c(
-    2,
-    1,
-    1,
-    0,
-    0,
-    0,
-    0,
-    1,
-    0,
-    2,
-    1,
-    0
-  ) /
-    2,
+  c(2, 1, 1, 0, 0, 0, 0, 1, 0, 2, 1, 0) / 2,
   2,
   6,
   byrow = TRUE
@@ -267,16 +279,16 @@ MStep_mult <- function(n, X) {
 }
 ```
 
---
+\medskip\pause
 
 `EStep_mult()` and `MStep_mult()` are abstract implementations. Requires
 arguments `group` and `X`.
 
-. . .
+\medskip\pause
 
 M-step only implemented when complete-data MLE is _linear estimator_.
 
-### EM Factory for Multinomial Models
+## EM Factory for Multinomial Models
 
 ```{r EM-factory}
 EM_multinomial <- function(x, group, prob, X) {
@@ -312,21 +324,7 @@ EM <- EM_multinomial(
   group = c(1, 1, 1, 2, 2, 3),
   prob = prob,
   X = matrix(
-    c(
-      2,
-      1,
-      1,
-      0,
-      0,
-      0,
-      0,
-      1,
-      0,
-      2,
-      1,
-      0
-    ) /
-      2,
+    c(2, 1, 1, 0, 0, 0, 0, 1, 0, 2, 1, 0) / 2,
     2,
     6,
     byrow = TRUE
@@ -347,9 +345,7 @@ EM(c(0.3, 0.3), cb = EM_tracer$tracer)
 summary(EM_tracer)
 ```
 
-. . .
-
-### Tracing the EM Algorithm
+## Tracing the EM Algorithm
 
 ```{r em-tracer}
 EM_tracer <- tracer(c("par0", "par"), Delta = 0)
@@ -371,7 +367,11 @@ EM_trace <- transform(
 )
 ```
 
-```{r plot-curves, echo = FALSE, warning = FALSE, fig.width = 9, fig.height = 8.5}
+##
+
+```{r plot-curves, echo = FALSE, warning = FALSE}
+#| fig-width: 5.4
+#| fig-height: 3
 loglik_pep <- Vectorize(function(p1, p2) loglik(c(p1, p2)))
 
 group <- c(1, 1, 1, 2, 2, 3)
@@ -485,16 +485,19 @@ log_lm <- lm(log(par_norm_diff) ~ n, data = EM_trace)
 exp(coefficients(log_lm)["n"])
 ```
 
-. . .
+\medskip\pause
 
 It is very small in this case implying fast convergence.
 
-. . .
+\medskip\pause
 
 This is not always the case. If the log-likelihood is flat, the EM-algorithm can
 become quite slow with a rate close to 1.
 
-```{r loglikelihood-convergence, warning=FALSE, echo = FALSE, fig.cap="Log-likelihood convergence", fig.height = 6}
+##
+
+```{r loglikelihood-convergence, warning=FALSE, echo = FALSE, fig.cap="Log-likelihood convergence"}
+#| fig-width: 4
 mutate(EM_trace, diff_loglik = loglik - min(loglik)) |>
   ggplot(aes(n, diff_loglik)) +
   labs(y = expression(l[theta] - min(l))) +
@@ -507,15 +510,16 @@ mutate(EM_trace, diff_loglik = loglik - min(loglik)) |>
 
 The EM-algorithm is a general algorithm for numerical optimization of a
 log-likelihood function. It works by iteratively optimizing
+$$
+Q(\theta \mid \theta^{(n)}) = E_{\theta^{(n)}}(\log f(Y \mid \theta) \mid X = x).
+$$
 
-$$Q(\theta \mid \theta^{(n)}) = E_{\theta^{(n)}}(\log f(Y \mid \theta) \mid X = x).$$
-
-. . .
+\medskip\pause
 
 For numerical optimization of $Q$ or variants of EM (generalized EM algorithms)
 the gradient and Hessian of $Q$ can be useful.
 
-. . .
+\medskip\pause
 
 For statistics we need the observed Fisher information (Hessian of the negative
 log-likelihood for the observed data).
@@ -523,8 +527,7 @@ log-likelihood for the observed data).
 ## Local Maxima
 
 - $Q$ is not typically convex, so no guarantee that the EM-algorithm converges
-  to the global maximum. --
-
+  to the global maximum.
 - How to deal with this?
 - Random starting values.
 - Global optimization (e.g. simulated annealing, genetic algorithms).
@@ -535,21 +538,26 @@ log-likelihood for the observed data).
 
 Note that with $p = p(\theta)$ in some parametrization of the cell
 probabilities,
-$$Q(\theta \mid \theta') = \sum_{i} \frac{x_{j(i)} p_i(\theta')}{M(p(\theta'))_{j(i)}} \log p_i(\theta),$$
+$$
+Q(\theta \mid \theta') = \sum_{i} \frac{x_{j(i)} p_i(\theta')}{M(p(\theta'))_{j(i)}} \log p_i(\theta),
+$$
 where $j(i)$ is defined by $i \in A_{j(i)}$.
 
-. . .
+\medskip\pause
 
 The gradient of $Q$ w.r.t. $\theta$
-$$\nabla_{\theta} Q(\theta \mid \theta') = \sum_{i} \frac{x_{j(i)}p_i(\theta')}{M(p(\theta'))_{j(i)}p_i(\theta)} \nabla p_i(\theta).$$
+$$
+\nabla_{\theta} Q(\theta \mid \theta') = \sum_{i} \frac{x_{j(i)}p_i(\theta')}{M(p(\theta'))_{j(i)}p_i(\theta)} \nabla p_i(\theta).
+$$
 
-. . .
+\medskip\pause
 
 When evaluated in $\theta'$ it is
+$$
+\nabla_{\theta} Q(\theta' \mid \theta') = \sum_{i} \frac{x_{j(i)}}{M(p(\theta'))_{j(i)}} \nabla p_i(\theta').
+$$
 
-$$\nabla_{\theta} Q(\theta' \mid \theta') = \sum_{i} \frac{x_{j(i)}}{M(p(\theta'))_{j(i)}} \nabla p_i(\theta').$$
-
-### Gradient Implementation
+## Gradient Implementation
 
 ```{r}
 Dprob <- function(p) {
@@ -581,18 +589,22 @@ grad_Q <- function(p, x = c(85, 196, 341)) {
 }
 ```
 
-### Gradient Identity
+## Gradient Identity
 
 Though computed as the gradient of $Q$,
-$$\nabla_{\theta} Q(\theta' \mid \theta') = \nabla_{\theta} \ell(\theta')$$ from
-the fact that
-$$\theta' = \arg\max_{\theta} \left(Q(\theta \mid \theta') -  \ell(\theta)\right).$$
+$$
+\nabla_{\theta} Q(\theta' \mid \theta') = \nabla_{\theta} \ell(\theta')
+$$
+from the fact that
+$$
+\theta' = \arg\max_{\theta} \left(Q(\theta \mid \theta') -  \ell(\theta)\right).
+$$
 
-. . .
+\medskip\pause
 
 Can also be verified by direct computation.
 
-. . .
+\medskip\pause
 
 The gradient is effectively zero in the limit.
 
@@ -629,10 +641,12 @@ $n$ i.i.d. observations.
 
 For i.i.d. observations the Fisher information (for one sample) can be estimated
 as the empirical variance of the gradient of the log-likelihood. By the identity
-$$\nabla_{\theta} Q_i(\theta' \mid \theta') = \nabla_{\theta} \ell_i(\theta')$$
+$$
+\nabla_{\theta} Q_i(\theta' \mid \theta') = \nabla_{\theta} \ell_i(\theta')
+$$
 holding for each observation, we can compute the empirical variance.
 
-### Moths Empirical Fisher
+## Moths Empirical Fisher
 
 Can think of the moths as i.i.d. observations.
 
@@ -654,13 +668,13 @@ emp_Fisher <- function(p, x = c(85, 196, 341)) {
 emp_Fisher(p_hat)
 ```
 
-### Numerical Fisher information
+## Numerical Fisher information
 
 :::: {.columns}
 
 ::: {.column width="47%"}
 
-#### `stats::optimHess()`
+### `stats::optimHess()`
 
 ```{r}
 -optimHess(p_hat, loglik, grad_Q)
@@ -670,7 +684,7 @@ emp_Fisher(p_hat)
 
 ::: {.column width="47%"}
 
-#### `numDeriv::jacobian()`
+### `numDeriv::jacobian()`
 
 ```{r}
 library(numDeriv)
@@ -685,20 +699,19 @@ ihat
 - Different estimates of same quantity
 - Should be close but not identical
 
-### Measuring Variance
+## Measuring Variance
 
 - Fisher information can be used to compute standard errors of MLEs
 - Empirical Fisher information can be computed for i.i.d. observations using the
   gradients $\nabla_{\theta} Q_i(\bar{\theta} \mid \hat{\theta})$ evaluated in
-  $\bar{\theta} = \hat{\theta}$. --
-
+  $\bar{\theta} = \hat{\theta}$.
 - Observed Fisher information can be computed by numerical differentiation of
   the gradient $-\nabla_{\theta} Q(\bar{\theta} \mid \bar{\theta})$ evaluated in
   $\bar{\theta} = \hat{\theta}$.
 
 . . .
 
-#### Bootstrap
+### Bootstrap
 
 - Another alternative is to use the bootstrap to compute standard errors.
 - Can be done nonparametrically
@@ -707,65 +720,66 @@ ihat
 
 ## Second Way: The Information Identity
 
-From $$\ell(\theta) = Q(\theta \mid \theta') + H(\theta \mid \theta')$$ it
-follows that the observed Fisher information equals
-
+From
+$$
+\ell(\theta) = Q(\theta \mid \theta') + H(\theta \mid \theta')
+$$
+it follows that the observed Fisher information equals
 $$
 \hat{i}_X := - D^2_{\theta} \ell(\hat{\theta}) =
 \underbrace{-D^2_{\theta} Q(\hat{\theta} \mid \theta')}_{\hat{i}_Y(\theta')} -
 \underbrace{D^2_{\theta} H(\hat{\theta} \mid \theta')}_{\hat{i}_{Y \mid X}(\theta')}.
 $$
 
-. . .
+\medskip\pause
 
 Introducing $\hat{i}_Y := \hat{i}_Y(\hat{\theta})$ and
 $\hat{i}_{Y \mid X} = \hat{i}_{Y \mid X}(\hat{\theta})$. We have the
-_information identity_ $$\hat{i}_X = \hat{i}_Y - \hat{i}_{Y \mid X}.$$
-
-. . .
+_information identity_
+$$
+\hat{i}_X = \hat{i}_Y - \hat{i}_{Y \mid X}.
+$$
 
 ### Interpretation
 
 - $\hat{i}_Y$ is the Fisher information for complete $Y$.
 - $\hat{i}_{Y \mid X}$ is the information "lost" from not observing full $X$.
 
-### More Identities
+## More Identities
 
 How to compute the information loss?
 
-. . .
+\medskip\pause
 
 The second **Bartlett identity** can be reformulated as
-
 $$
 \partial_{\theta_i} \partial_{\theta_j} H(\bar{\theta} \mid \bar{\theta})
 = - \partial_{\theta'_i} \partial_{\theta_j} H(\bar{\theta} \mid \bar{\theta})
 $$
-
 which follows from differentiation under the integral of
 $\int h(y \mid x, \theta) \mu_x(d y) = 1.$
 
-. . .
+\medskip\pause
 
 And since we also have
-
-$$Q(\theta \mid \theta') = \ell(\theta) - H(\theta \mid \theta')$$
-
+$$
+Q(\theta \mid \theta') = \ell(\theta) - H(\theta \mid \theta')
+$$
 we find that
-
 $$
 \partial_{\theta'_i} \partial_{\theta_j} Q(\bar{\theta} \mid \bar{\theta}) =  -
 \partial_{\theta'_i} \partial_{\theta_j} H(\bar{\theta} \mid \bar{\theta}) =
 \partial_{\theta_i} \partial_{\theta_j} H(\bar{\theta} \mid \bar{\theta}).
 $$
 
---
+\medskip\pause
 
 Thus
+$$
+\hat{i}_{Y \mid X} = D_{\theta'} \nabla_{\theta} Q(\hat{\theta} \mid \hat{\theta}).
+$$
 
-$$\hat{i}_{Y \mid X} = D_{\theta'} \nabla_{\theta} Q(\hat{\theta} \mid \hat{\theta}).$$
-
-### New Implementations
+## New Implementations
 
 First we implement the map $Q$ as an R function.
 
@@ -778,7 +792,7 @@ Q <- function(p, pp, x = c(85, 196, 341)) {
 }
 ```
 
---
+. . .
 
 and a modified `grad_Q()` of two arguments:
 
@@ -790,7 +804,7 @@ grad_Q <- function(p, pp, x = c(85, 196, 341)) {
 }
 ```
 
-### Numerical Differentiation of $Q$
+## Numerical Differentiation of $Q$
 
 We use numDeriv functions `jacobian()` and `hessian()` to differentiate
 numerically.
@@ -800,7 +814,7 @@ iY <- -hessian(Q, p_hat, pp = p_hat)
 iY
 ```
 
---
+\medskip\pause
 
 ```{r q-jacobian}
 -jacobian(grad_Q, p_hat, pp = p_hat) # This should be the same as iY
@@ -816,34 +830,37 @@ iY - iYX # same as `emp_Fisher(p_hat)`
 ## Third Way: The EM-Mapping
 
 Define $\Phi : \Theta \mapsto \Theta$ by
-$$\Phi(\theta') = \textrm{arg max}_{\theta} \ Q(\theta \mid \theta').$$
+$$
+\Phi(\theta') = \textrm{arg max}_{\theta} \ Q(\theta \mid \theta').
+$$
 
-. . .
+\medskip\pause
 
 A global maximum of the likelihood is a fixed point of $\Phi$,
 $\Phi(\theta) = \theta.$
 
-. . .
+\medskip\pause
 
-Using that the limit of the EM algorithm, $\hat{\theta}$, is a fixed point and
-other identities above, it can be shown that
-$$D_{\theta} \Phi(\hat{\theta})^T = \hat{i}_{Y\mid X} \left(\hat{i}_Y\right)^{-1}.$$
+Since the limit of the EM algorithm, $\hat{\theta}$, is a fixed point and other
+identities above, it can be shown that
+$$
+D_{\theta} \Phi(\hat{\theta})^T = \hat{i}_{Y\mid X} \left(\hat{i}_Y\right)^{-1}.
+$$
 
-. . .
+\medskip\pause
 
 Hence
-
 $$
 \begin{aligned} \hat{i}_X & = \left(I - \hat{i}_{Y\mid X}
-\left(\hat{i}_Y\right)^{-1}\right) \hat{i}\_Y = \left(I - D_{\theta}
-\Phi(\hat{\theta})^T\right) \hat{i}\_Y. \end{aligned}
+\left(\hat{i}_Y\right)^{-1}\right) \hat{i}_Y = \left(I - D_{\theta}
+\Phi(\hat{\theta})^T\right) \hat{i}_Y. \end{aligned}
 $$
 
-. . .
+\medskip\pause
 
 $D_{\theta} \Phi(\hat{\theta})$ can be computed via numerical differentiation.
 
-### EM Step Implementation
+## EM Step Implementation
 
 ```{r}
 EM_multinomial_step <- function(x, group, prob, X) {
@@ -868,7 +885,7 @@ p_hat
 Phi(p_hat) # The limit is a fixed point
 ```
 
-### Differentiating the EM Map
+## Differentiating the EM Map
 
 ```{r}
 DPhi <- jacobian(Phi, p_hat) # Using numDeriv function 'jacobian()'
@@ -884,14 +901,19 @@ ihat # Computed using numerical differentiation of grad_Q
 Let $Z \in \{1, \ldots, K\}$ with $P(Z = k) = p_k$, and the conditional
 distribution of $X$ given $Z = k$ has density $f_k( \cdot \mid \psi_k)$.
 
-. . .
+\medskip\pause
 
-The joint density is $$(x, k) \mapsto f_k(x \mid \psi_k) p_k$$
+The joint density is
+$$
+(x, k) \mapsto f_k(x \mid \psi_k) p_k
+$$
 
 . . .
 
 and the marginal density for the distribution of $X$ is
-$$f(x \mid \theta) =  \sum_{k=1}^K f_k(x \mid \psi_k) p_k.$$
+$$
+f(x \mid \theta) =  \sum_{k=1}^K f_k(x \mid \psi_k) p_k.
+$$
 
 ## Gaussian Mixtures $(K = 2)$
 
@@ -899,21 +921,22 @@ The two Gaussian distributions are parametrized by five parameters
 $\mu_1, \mu_2 \in \mathbb{R}$ and $\sigma_1, \sigma_2 > 0$, and
 $p = P(Z = 1) = 1 - P(Z = 2)$.
 
-. . .
+\medskip\pause
 
 The conditional distribution of $X$ given $Z = k$ is
-$$f_k(x) = \frac{1}{\sqrt{2 \pi \sigma_k^2}} e^{-\frac{(x - \mu_k)^2}{2 \sigma_k^2}}.$$
+$$
+f_k(x) = \frac{1}{\sqrt{2 \pi \sigma_k^2}} e^{-\frac{(x - \mu_k)^2}{2 \sigma_k^2}}.
+$$
 
-. . .
+\medskip\pause
 
 The marginal density is
-
 $$
 f(x) = p \frac{1}{\sqrt{2 \pi \sigma_1^2}} e^{-\frac{(x - \mu_1)^2}{2 \sigma_1^2}} +
 (1 - p)\frac{1}{\sqrt{2 \pi \sigma_2^2}}e^{-\frac{(x - \mu_2)^2}{2 \sigma_2^2}}.
 $$
 
-### Simulation
+## Simulation
 
 :::: {.columns}
 
@@ -933,9 +956,6 @@ z <- sample(
   replace = TRUE,
   prob = c(p, 1 - p)
 )
-
-# Conditional simulation
-# from mixture components
 x <- numeric(n)
 n1 <- sum(z)
 x[z] <- rnorm(n1, mu1, sigma1)
@@ -946,7 +966,7 @@ x[!z] <- rnorm(n - n1, mu2, sigma2)
 
 ::: {.column width="47%"}
 
-```{r, echo=FALSE, fig.height=5, fig.width = 5.5}
+```{r, echo=FALSE}
 gausdens <- function(x) {
   (p *
     exp(-(x - mu1)^2 / (2 * sigma1^2)) /
@@ -1004,35 +1024,36 @@ optim(c(0.9, 3, 1), loglik, x = x)[c(1, 2)]
 ## The $Q$-Function
 
 The complete data log-likelihood is
-$$\sum_{i=1}^n 1(z_i = 1) \left(\log(p) - \frac{(x_i - \mu_1)^2}{2 \sigma_1^2} \right) + 1(z_i = 2)\left( \log(1-p) - \frac{(x_i - \mu_2)^2}{2 \sigma_2^2} \right) $$
+$$
+\sum_{i=1}^n 1(z_i = 1) \left(\log(p) - \frac{(x_i - \mu_1)^2}{2 \sigma_1^2} \right) + 1(z_i = 2)\left( \log(1-p) - \frac{(x_i - \mu_2)^2}{2 \sigma_2^2} \right)
+$$
 
 . . .
 
 and
-
-$$Q(\theta \mid \theta')  = \sum_{i=1}^n \hat{p}_{i} \left(\log(p) - \frac{(x_i - \mu_1)^2}{2 \sigma_1^2} \right) + (1 - \hat{p}_{i})\left( \log(1-p) - \frac{(x_i - \mu_2)^2}{2 \sigma_2^2} \right)$$
-
+$$
+Q(\theta \mid \theta')  = \sum_{i=1}^n \hat{p}_{i} \left(\log(p) - \frac{(x_i - \mu_1)^2}{2 \sigma_1^2} \right) + (1 - \hat{p}_{i})\left( \log(1-p) - \frac{(x_i - \mu_2)^2}{2 \sigma_2^2} \right)
+$$
 where $\hat{p}_i = P_{\theta'}(Z_i = 1 \mid X_i = x_i)$.
 
-. . .
+\medskip\pause
 
 The maximum is attained at
-
 $$
 \theta = \left(\frac{1}{n} \sum_{i} \hat{p}_i, \frac{1}{\sum_{i} \hat{p}_i} \sum_{i} \hat{p}_i x_i,
 \frac{1}{\sum_{i} (1 - \hat{p}_i)} \sum_{i} (1 - \hat{p}_i) x_i \right).
 $$
 
-### The E-Step
+## The E-Step
 
 The conditional probability in a mixture model is generally
-
-$$P(Z = z \mid X = x) = \frac{p_z f_z(x \mid \psi_z)}{\sum_{k = 1}^K p_k f_k(x \mid \psi_k)}$$
+$$
+P(Z = z \mid X = x) = \frac{p_z f_z(x \mid \psi_z)}{\sum_{k = 1}^K p_k f_k(x \mid \psi_k)}
+$$
 
 . . .
 
 which for the $K = 2$ Gaussian case gives
-
 $$
 \hat{p}_i = P_{\theta'} (Z_i = 1 \mid X = x_i) =
 \frac{ p'_1 e^{-\frac{(x_i - \mu_1')^2}{2 \sigma_1^2}}}{
@@ -1040,9 +1061,8 @@ $$
 \frac{\sigma_1 (1 - p'_1)}{\sigma_2} e^{-\frac{(x_i - \mu_2')^2}{2 \sigma_2^2}}\right) }.
 $$
 
-. . .
 
-### Implementation
+## Implementation
 
 See [`em_gauss_mix.R`](R/em_gauss_mix.R) for the source file of the
 implementation.
@@ -1115,7 +1135,7 @@ grad1(par_hat)
 grad2(par_hat)
 ```
 
-### Convergence
+## Convergence
 
 ```{r tracing-convergence}
 library(CSwR)
