--- a/index.qmd
+++ b/index.qmd
@@ -133,6 +133,10 @@ will work on debugging a piece of code together. You can find the code here:
 - **Reading:**
   [Chapter 22 (AdvR)](https://adv-r.hadley.nz/debugging.html#debugging)
 
+#### Exercise Session 5
+
+- **Main topic**: None - work on your assignments with TA assistance
+
 #### Lecture 9: Likelihood Optimization and the EM Algorithm
 
 - **Slides:** [Likelihood Optimization and the EM Algorithm](slides/lecture9.pdf)
